--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build": "webpack --env.prod"
   },
   "dependencies": {
+    "agora-rtc-sdk": "^3.3.0",
+    "ant-design-vue": "^2.0.0-rc.2",
     "vue": "^3.0.0-rc.9"
   },
   "devDependencies": {
@@ -13,10 +15,12 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.11.0",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
     "url-loader": "^4.0.0",
     "vue-loader": "^16.0.0-beta.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
